Fix overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,8 +45,7 @@ button {
   background-color: #eee;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  overflow: auto; }
+  align-items: center; }
   .sign .header {
     width: 100%;
     height: 7vh;
@@ -67,7 +66,8 @@ button {
     min-height: 600px;
     width: 50%;
     display: flex;
-    justify-content: space-between; }
+    justify-content: space-between;
+    overflow: auto; }
     .sign .sign-box .sign-form {
       background-color: #fff;
       padding: 1rem 1.8rem;
